Fix: Opção 6 e tratando excessões